overflow-y on overview added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main id="main">
       <div class="movie">
-        <img src="#" alt="" />
+        <img src="./img/felix-mooneeram-evlkOfkQ5rE-unsplash.jpg" alt="" />
         <div class="movie-info">
           <h3>Movie Title</h3>
           <span class="green">9.8</span>
@@ -30,7 +30,7 @@
       </div>
 
       <div class="movie">
-        <img src="#" alt="" />
+        <img src="./img/felix-mooneeram-evlkOfkQ5rE-unsplash.jpg" alt="" />
         <div class="movie-info">
           <h3>Movie Title</h3>
           <span class="green">9.8</span>
@@ -44,10 +44,10 @@
       </div>
 
       <div class="movie">
-        <img src="#" alt="" />
+        <img src="./img/felix-mooneeram-evlkOfkQ5rE-unsplash.jpg" alt="" />
         <div class="movie-info">
           <h3>Movie Title</h3>
-          <span class="green">9.8</span>
+          <span class="red">3.6</span>
         </div>
         <div class="overview">
           <h3>Overview</h3>
