--- a/index.html
+++ b/index.html
@@ -10,53 +10,11 @@
   <body>
     <header>
       <form id="form">
-        <input type="text" id="text" class="search" placeholder="Search" />
+        <input type="text" id="search" class="search" placeholder="Search" />
       </form>
     </header>
 
-    <main id="main">
-      <div class="movie">
-        <img src="./img/felix-mooneeram-evlkOfkQ5rE-unsplash.jpg" alt="" />
-        <div class="movie-info">
-          <h3>Movie Title</h3>
-          <span class="green">9.8</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, asperiores ab perferendis quod aliquam
-          neque culpa? Ea doloremque ipsam nisi dignissimos eligendi pariatur laboriosam tenetur? Nihil commodi ducimus
-          temporibus enim?
-        </div>
-      </div>
-
-      <div class="movie">
-        <img src="./img/felix-mooneeram-evlkOfkQ5rE-unsplash.jpg" alt="" />
-        <div class="movie-info">
-          <h3>Movie Title</h3>
-          <span class="green">9.8</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, asperiores ab perferendis quod aliquam
-          neque culpa? Ea doloremque ipsam nisi dignissimos eligendi pariatur laboriosam tenetur? Nihil commodi ducimus
-          temporibus enim?
-        </div>
-      </div>
-
-      <div class="movie">
-        <img src="./img/felix-mooneeram-evlkOfkQ5rE-unsplash.jpg" alt="" />
-        <div class="movie-info">
-          <h3>Movie Title</h3>
-          <span class="red">3.6</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, asperiores ab perferendis quod aliquam
-          neque culpa? Ea doloremque ipsam nisi dignissimos eligendi pariatur laboriosam tenetur? Nihil commodi ducimus
-          temporibus enim?
-        </div>
-      </div>
-    </main>
+    <main id="main"></main>
 
     <script src="./script.js"></script>
   </body>
